--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "consolid-react-ui",
-  "version": "0.0.8",
+  "version": "0.0.20",
   "description": "UI components for LBDserver modules relying on React as a front-end framework",
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -24,11 +24,14 @@
     "@inrupt/solid-client-authn-browser": "^1.11.2",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
-    "consolid": "^1.0.1",
+    "consolid": "^1.0.3",
+    "core-js": "^3.18.1",
+    "mem": "^9.0.1",
     "n3": "^1.11.1",
     "react": "^17.0.2",
-    "react-router-dom": "^5.3.0",
-    "recoil": "^0.4.1"
+    "react-dom": "^17.0.2",
+    "react-json-editor-viewer": "^1.0.7",
+    "react-router-dom": "^5.3.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.15.7",
